# noize

./: .gitattributes  .gitignore  README.md  config.json  dockerfile  docs.md  pyproject.toml
experiments/: antifake_tests.py  phase1_constants.py  resource_eval.py  resource_eval_cpu.py  segmenting.py  tests.py
experiments/voices/: sof_04415.pth  som_01208.pth  som_05223.pth
misc/voices/: sof_08886.pth
noize/avc/: model.py
noize/cli/: main.py  voices.py
noize/freevc/: speaker_encoder.py  utils.py
noize/misc/voices/sof_00295/: avc_embed.pth
noize/misc/voices/sof_00610/: ov_embed.pth  xtts_embed.pth
noize/misc/voices/sof_04310/: desc.txt  xtts_embed.pth
noize/misc/voices/sof_08886/: avc_embed.pth  fvc_embed.pth  ov_embed.pth
noize/misc/voices/som_03502/: desc.txt
noize/misc/voices/som_05223/: avc_embed.pth
noize/misc/voices/som_07505/: ov_embed.pth
noize/misc/voices/som_09799/: avc_embed.pth  desc.txt  xtts_embed.pth
noize/openvoice/: mel_processing.py  models.py  modules.py
noize/perturb/: encoders.py  perturb.py
noize/utils/: utils.py
noize/web/: queue.py  server.py
noize/web/templates/: index.html
rachleona_noize/: cli.py  config.json  encoders.py  logging.py  main.py  ov_adapted.py  perturb.py  quality.py  utils.py  voices.py
rachleona_noize/adaptive_voice_conversion/: model.py  utils.py
rachleona_noize/avc/: model.py  utils.py
rachleona_noize/cli/: cli.py  main.py  voices.py
rachleona_noize/freevc/: speaker_encoder.py  utils.py
rachleona_noize/misc/: avc_model.ckpt  points.csv
rachleona_noize/misc/voices/: sof_00295.pth  sof_02121.pth  som_01523.pth  som_03502.pth
rachleona_noize/misc/voices/sof_00295/: desc.txt  fvc_embed.pth  (+3 more)
rachleona_noize/openvoice/: models.py  modules.py
rachleona_noize/perturb/: encoders.py  perturb.py  quality.py
rachleona_noize/utils/: utils.py
rachleona_noize/web/: queue.py  server.py
rachleona_noize/web/static/: index.js
rachleona_noize/yourtts/: compute_embeddings  compute_embeddings.py
src/: cli.py  main.py  ov_adapted.py  perturb.py  utils.py
src/openvoice/: models.py  modules.py
(+39 files in other folders)
