[project]
name = "rachleona-noize"
version = "0.1.0"
description = "A cli tool that uses adversarial perturbation to protect audio clips from being used in unauthorised voice cloning"
authors = [
    {name = "rachleona",email = "racheltam818@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.10 <3.13"
dependencies = [
    "cdpam (>=0.0.6,<0.0.7)",
    "ctranslate2 (<=4.4.0)",
    "resampy (>=0.4.3,<0.5.0)",
    "torch (>=2.2.0,<3.0.0)",
    "soundfile (>=0.13.0,<0.14.0)",
    "typer (>=0.15.1,<0.16.0)",
    "librosa (>=0.10.2.post1,<0.11.0)",
    "faster-whisper (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
