[project]
name = "rachleona-noize"
version = "0.1.0"
description = "A cli tool that uses adversarial perturbation to protect audio clips from being used in unauthorised voice cloning"
authors = [
    {name = "rachleona",email = "racheltam818@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.9 <3.12"
dependencies = [
    "ctranslate2 (<=4.4.0)",
    "torch (>=2.2.0,<3.0.0)",
    "typer (>=0.15.1,<0.16.0)",
    "faster-whisper (>=1.1.1,<2.0.0)",
    "tts (>=0.22.0,<0.23.0)"
]

[project.scripts]
noize = 'rachleona_noize.main:app'


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
